--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,11 +22,12 @@ jobs:
         RELEASE_VERSION: ${{ steps.get_release_version.outputs.release_version }}
       run: |
         echo ::set-output name=version_without_prefix::${RELEASE_VERSION:1}
+    - name: pwd
+      id: pwd
+      run: pwd
     - name: ls
-      id: list_dir
-      run: |
-        pwd
-        ls
+      id: listdir
+      run: echo "$(ls)"
     - name: Get highest semver
       id: get_highest_semver
       env:
