--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,10 @@ jobs:
       run: pwd
     - name: ls
       id: listdir
-      run: echo "$(ls)"
+      run: ls /home/runner/work/feast/feast
+    - name: cd
+      id: chdir
+      run: cd infra
     - name: Get highest semver
       id: get_highest_semver
       env:
